syntax = "proto3";

package telele.type;

import "google/protobuf/timestamp.proto";
import "telele/type/tag_category.proto";

message Tag {
  int32                     id                = 1;
  string                    language_code     = 2;
  string                    name              = 3;
  int32                     tag_category_id   = 4;
  google.protobuf.Timestamp createdAt         = 5;
  google.protobuf.Timestamp updatedAt         = 6;
  google.protobuf.Timestamp deletedAt         = 7;
  optional string           tag_category_name = 8;
}